Fixed text wrapping issues

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header,
 
 .wrapper {
   position: sticky;
-  top: 16%;
+  top: 80px;
 }
 
 .container-fluid {
@@ -122,7 +122,7 @@ img {
   font-weight: 700;
   background-color: #ffe400;
   border-radius: 20px;
-  font-size: 0.872rem;
+  font-size: 0.6em;
 }
 
 .right-nav img {
@@ -396,6 +396,15 @@ img {
     font-weight: 600;
     font-size: small;
     width: 60%;
+  }
+
+  .btn-warning {
+    font-size: 0.875em;
+  }
+
+  .wrapper {
+    position: sticky;
+    top: 100px;
   }
 }
 
